--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,10 @@
+/* ----------$Catalog--------
+$normalize.css
+$color
+
+------------------------------ */
+
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 
@@ -417,4 +424,43 @@ template {
 
 [hidden] {
     display: none;
+}
+
+
+/* ------$color------ */
+
+.bg-color--primary {
+    background-color: rgb(15, 4, 27);
+}
+
+.bg-color--secondary {
+    background-color: rgb(249, 252, 222);
+}
+
+.bg-color--third {
+    background-color: rgb(5, 2, 36);
+}
+
+.bg-color--light-purple {
+    background-color: rgb(94, 39, 94);
+}
+
+.bg-color--blue {
+    background-color: rgb(7, 3, 46);
+}
+
+.bg-color-dark-gray {
+    background-color: rgb(20, 20, 20);
+}
+
+.color--primary {
+    color: orange;
+}
+
+.color--secondary {
+    color: rgb(250, 250, 148);
+}
+
+.color--green-blue {
+    color: rgb(17, 56, 44);
 }
