--- a/css/u-style.css
+++ b/css/u-style.css
@@ -36,7 +36,7 @@ h1 {
 }
 
 * {
-    font-family: 'Noto Sans TC', sans-serif;
+    font-family: 'Helvetica', 'Noto Sans TC', sans-serif;
 }
 
 .loading {
@@ -532,7 +532,7 @@ h1 {
 .mainbtn {
     display: block;
     height: 46px;
-    width: 150px;
+    width: 170px;
     border: 1px solid rgb(40, 13, 65);
     border-radius: 5%;
     margin-left: auto;
@@ -560,6 +560,42 @@ h1 {
 .mainbtn:hover {
     background-color: rgb(40, 13, 65);
     color: whitesmoke;
-    font-weight: 500;
     text-decoration: none;
+    cursor: pointer;
+}
+
+.secondarybtn {
+    display: block;
+    height: 46px;
+    width: 150px;
+    border: 1px solid rgb(250, 250, 148);
+    border-radius: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    color: rgb(250, 250, 148);
+    line-height: 40px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+    text-decoration: none;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    transition: 0.3s all;
+    -webkit-border-radius: 5%;
+    -moz-border-radius: 5%;
+    -ms-border-radius: 5%;
+    -o-border-radius: 5%;
+    -webkit-transition: 0.3s all;
+    -moz-transition: 0.3s all;
+    -ms-transition: 0.3s all;
+    -o-transition: 0.3s all;
+    z-index: 50;
+}
+
+.secondarybtn:hover {
+    /* border: 2px solid rgb(99, 195, 194); */
+    background-color: rgb(250, 250, 148);
+    color: rgb(40, 13, 65);
+    text-decoration: none;
+    cursor: pointer;
 }
