--- a/css/base.css
+++ b/css/base.css
@@ -4,13 +4,10 @@ $color
 
 ------------------------------ */
 
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
 
 /* Document
    ========================================================================== */
-
 
 /**
  * 1. Correct the line height in all browsers.
@@ -24,10 +21,8 @@ html {
     /* 2 */
 }
 
-
 /* Sections
      ========================================================================== */
-
 
 /**
    * Remove the margin in all browsers.
@@ -38,7 +33,6 @@ body {
     padding: 0;
 }
 
-
 /**
    * Render the `main` element consistently in IE.
    */
@@ -46,7 +40,6 @@ body {
 main {
     display: block;
 }
-
 
 /**
    * Correct the font size and margin on `h1` elements within `section` and
@@ -56,12 +49,11 @@ main {
 h1 {
     font-size: 2em;
     margin: 0.67em 0;
+    margin-bottom: 4rem;
 }
-
 
 /* Grouping content
      ========================================================================== */
-
 
 /**
    * 1. Add the correct box sizing in Firefox.
@@ -77,7 +69,6 @@ hr {
     /* 2 */
 }
 
-
 /**
    * 1. Correct the inheritance and scaling of font size in all browsers.
    * 2. Correct the odd `em` font sizing in all browsers.
@@ -90,10 +81,8 @@ pre {
     /* 2 */
 }
 
-
 /* Text-level semantics
      ========================================================================== */
-
 
 /**
    * Remove the gray background on active links in IE 10.
@@ -102,7 +91,6 @@ pre {
 a {
     background-color: transparent;
 }
-
 
 /**
    * 1. Remove the bottom border in Chrome 57-
@@ -118,31 +106,25 @@ abbr[title] {
     /* 2 */
 }
 
-
 /**
    * Add the correct font weight in Chrome, Edge, and Safari.
    */
 
-b,
-strong {
+b, strong {
     font-weight: bolder;
 }
-
 
 /**
    * 1. Correct the inheritance and scaling of font size in all browsers.
    * 2. Correct the odd `em` font sizing in all browsers.
    */
 
-code,
-kbd,
-samp {
+code, kbd, samp {
     font-family: monospace, monospace;
     /* 1 */
     font-size: 1em;
     /* 2 */
 }
-
 
 /**
    * Add the correct font size in all browsers.
@@ -152,14 +134,12 @@ small {
     font-size: 80%;
 }
 
-
 /**
    * Prevent `sub` and `sup` elements from affecting the line height in
    * all browsers.
    */
 
-sub,
-sup {
+sub, sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
@@ -174,10 +154,8 @@ sup {
     top: -0.5em;
 }
 
-
 /* Embedded content
      ========================================================================== */
-
 
 /**
    * Remove the border on images inside links in IE 10.
@@ -187,21 +165,15 @@ img {
     border-style: none;
 }
 
-
 /* Forms
      ========================================================================== */
-
 
 /**
    * 1. Change the font styles in all browsers.
    * 2. Remove the margin in Firefox and Safari.
    */
 
-button,
-input,
-optgroup,
-select,
-textarea {
+button, input, optgroup, select, textarea {
     font-family: inherit;
     /* 1 */
     font-size: 100%;
@@ -212,67 +184,50 @@ textarea {
     /* 2 */
 }
 
-
 /**
    * Show the overflow in IE.
    * 1. Show the overflow in Edge.
    */
 
-button,
-input {
+button, input {
     /* 1 */
     overflow: visible;
 }
-
 
 /**
    * Remove the inheritance of text transform in Edge, Firefox, and IE.
    * 1. Remove the inheritance of text transform in Firefox.
    */
 
-button,
-select {
+button, select {
     /* 1 */
     text-transform: none;
 }
-
 
 /**
    * Correct the inability to style clickable types in iOS and Safari.
    */
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+button, [type="button"], [type="reset"], [type="submit"] {
     -webkit-appearance: button;
 }
-
 
 /**
    * Remove the inner border and padding in Firefox.
    */
 
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
     border-style: none;
     padding: 0;
 }
-
 
 /**
    * Restore the focus styles unset by the previous rule.
    */
 
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
     outline: 1px dotted ButtonText;
 }
-
 
 /**
    * Correct the padding in Firefox.
@@ -281,7 +236,6 @@ button:-moz-focusring,
 fieldset {
     padding: 0.35em 0.75em 0.625em;
 }
-
 
 /**
    * 1. Correct the text wrapping in Edge and IE.
@@ -305,7 +259,6 @@ legend {
     /* 1 */
 }
 
-
 /**
    * Add the correct vertical alignment in Chrome, Firefox, and Opera.
    */
@@ -313,7 +266,6 @@ legend {
 progress {
     vertical-align: baseline;
 }
-
 
 /**
    * Remove the default vertical scrollbar in IE 10+.
@@ -323,30 +275,25 @@ textarea {
     overflow: auto;
 }
 
-
 /**
    * 1. Add the correct box sizing in IE 10.
    * 2. Remove the padding in IE 10.
    */
 
-[type="checkbox"],
-[type="radio"] {
+[type="checkbox"], [type="radio"] {
     box-sizing: border-box;
     /* 1 */
     padding: 0;
     /* 2 */
 }
 
-
 /**
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
     height: auto;
 }
-
 
 /**
    * 1. Correct the odd appearance in Chrome and Safari.
@@ -360,7 +307,6 @@ textarea {
     /* 2 */
 }
 
-
 /**
    * Remove the inner padding in Chrome and Safari on macOS.
    */
@@ -368,7 +314,6 @@ textarea {
 [type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
 }
-
 
 /**
    * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -382,10 +327,8 @@ textarea {
     /* 2 */
 }
 
-
 /* Interactive
      ========================================================================== */
-
 
 /*
    * Add the correct display in Edge, IE 10+, and Firefox.
@@ -395,7 +338,6 @@ details {
     display: block;
 }
 
-
 /*
    * Add the correct display in all browsers.
    */
@@ -404,10 +346,8 @@ summary {
     display: list-item;
 }
 
-
 /* Misc
      ========================================================================== */
-
 
 /**
    * Add the correct display in IE 10+.
@@ -417,7 +357,6 @@ template {
     display: none;
 }
 
-
 /**
    * Add the correct display in IE 10.
    */
@@ -425,7 +364,6 @@ template {
 [hidden] {
     display: none;
 }
-
 
 /* ------$color------ */
 
